<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Localze</string>
    <string name="title_activity_maps">Map</string>
    <string name="password"><font fontfamily="@font/l_r" size="16">Password</font></string>
    <string name="mobile_number"><font fontfamily="@font/l_r" size="16">Enter your mobile number</font></string>
    <string name="create_your_account"><font lineheight="30sp">Create your Account</font></string>
    <string name="full_name"><font fontfamily="@font/l_r" size="14">Full name</font></string>
    <string name="mobile_number_reg"><font fontfamily="@font/l_r" size="14">Mobile number</font></string>
    <string name="location"><font fontfamily="@font/l_r" size="14">Location</font></string>
    <string name="password_reg"><font fontfamily="@font/l_r" size="14">Password</font></string>
    <string name="confirm_password_reg"><font fontfamily="@font/l_r" size="14">Confirm Password</font></string>
    <string name="email_reg"><font fontfamily="@font/l_r" size="14">Email</font></string>
    <string name="otp"><font fontfamily="@font/l_r" size="16">Old password</font></string>
    <string name="confirm_password_change"><font fontfamily="@font/l_r" size="16">Confirm New Password</font></string>
    <string name="new_password"><font fontfamily="@font/l_r" size="16">New Password</font></string>
    <string name="otp_reg_confirmation">Otp</string>
    <string name="title_activity_maps2">Map</string>
    <string name="localze"><stroke color="#fff" width="2dp">Localze</stroke></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Spinner_items">
        <item><font fontfamily="@font/montserrat_medium" size="14">piece</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">litre</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">meter</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">gm</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">kg</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">ml</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">mm</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">ft</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">sq.ft.</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">sq. meter</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">km</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">set</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">hour</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">day</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">bunch</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">bundle</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">month</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">year</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">service</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">work</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">packet</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">box</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">pound</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">dozen</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">gunta</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">pair</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">minute</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">quintal</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">ton</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">tablet</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">plate</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">inch</font></item>

    </string-array>
    <string-array name="Spinner_Bank_type">
        <item><font fontfamily="@font/montserrat_medium" size="14">Savings Account</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Current Account</font></item>
    </string-array>
    <string-array name="Spinner_Item1">
        <item><font fontfamily="@font/montserrat_medium" size="14">Grocery</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Food</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Electronics</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Fashion</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Mobiles</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Home</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Beauty</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Appliances</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Toys &amp; Kids</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Sports</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Stationary</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Automobiles</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Fitness</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Health Care</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Travel</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Gaming</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Others</font></item>
    </string-array>
    <string-array name="Spinner_Category">
        <item><font fontfamily="@font/montserrat_medium" size="14">Grocery</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Food</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Electronics</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Fashion</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Mobiles</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Home</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Beauty</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Appliances</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Toys &amp; Kids</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Sports</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Stationary</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Automobiles</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Fitness</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Health Care</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Travel</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Gaming</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="14">Others</font></item>
    </string-array>
    <string-array name="Spinner_Days">
        <item><font fontfamily="@font/montserrat_medium" size="16">None</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Sunday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Monday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Tuesday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Wednesday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Thursday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Friday</font></item>
        <item><font fontfamily="@font/montserrat_medium" size="16">Saturday</font></item>
    </string-array>
    <string name="shop_name">SHOP NAME</string>
    <string name="todo">TODO</string>
    <string name="oh_no">Oh No..</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="retry">Retry</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order Id :</string>
    <string name="_123456">#123456</string>
    <string name="date">Date :</string>
    <string name="_27_02_2020_9_45_pm">27/02/2020, 9:45 PM</string>
    <string name="order_status">Order Status :</string>
    <string name="items">Items :</string>
    <string name="_9">9</string>
    <string name="amount">Amount :</string>
    <string name="rs_1_209">Rs. 1,209/-</string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="saraibika_jaunpur_up_222202">Saraibika, Jaunpur UP - 222202</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="in_progress">In Progress</string>
    <string name="abc_shop">ABC Shop</string>
    <string name="shop_address">Shop Address :</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="register_as_seller">Register as Seller</string>
    <string name="current_orders_">Current Orders</string>
    <string name="no_current_orders_yet">No current orders yet!</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="proceed">Proceed</string>
</resources>