<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserListOrderDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageMakeCallList"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:src="@drawable/ic_baseline_phone_24" />

        <ImageView
            android:id="@+id/imgListBackOrderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtCO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_toEndOf="@id/imgListBackOrderDetails"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/order_details"
            android:textColor="#000000"
            android:textSize="@dimen/_13ssp"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imgListBackOrderDetails"
            android:background="#d3d3d3" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:contentPadding="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/order_id"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtOrderListIdUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_123456"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtOrderListDateUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_27_02_2020_9_45_pm"
                    android:textSize="@dimen/_10ssp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/order_status"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />


                <TextView
                    android:id="@+id/txtOrderListStatusUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/in_progress"
                    android:textColor="#008000"
                    android:textSize="@dimen/_10ssp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/shop_name"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />


                <TextView
                    android:id="@+id/txtShopNameOrderList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/abc_shop"
                    android:textColor="#1589ff"
                    android:textSize="@dimen/_10ssp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/items"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtItemsListUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/_9"
                    android:textSize="@dimen/_10ssp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/amount"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtOrderListCostUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/rs_1_209"
                    android:textColor="#008000"
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:id="@+id/btnPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_buttons"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Pay Now"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_12ssp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/delivery_address"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtOrderListDeliveryAddressUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/saraibika_jaunpur_up_222202"
                    android:textSize="@dimen/_10ssp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/shop_address"
                    android:textColor="#000000"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtOrderListShopAddressUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/saraibika_jaunpur_up_222202"
                    android:textSize="@dimen/_10ssp" />
            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d3d3d3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/ordered_items"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d3d3d3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_order_list_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="true"
        app:stackFromEnd="true"
        tools:listitem="@layout/list_single_row_customer_order" />


</LinearLayout>