<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentUserOrder">

    <RelativeLayout
        android:id="@+id/rl_currentListOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackCurrentList"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txtCO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_toEndOf="@id/imgBackCurrentList"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/current_orders_"
            android:textColor="#000000"
            android:textSize="@dimen/_13ssp" />

        <View
            android:id="@id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imgBackCurrentList"
            android:background="#d3d3d3" />

        <RelativeLayout
            android:id="@+id/rl_Current_List_orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/todo"
                android:id="@+id/imgEmpty"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgEmpty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/no_current_orders_yet"
                android:textColor="#696969"
                android:textSize="@dimen/_15ssp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCurrentListOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:visibility="gone"
            tools:listitem="@layout/row_order_user" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_retryCurrentListOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lost"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtOhNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/oh_no"
            android:textSize="@dimen/_15ssp" />


        <TextView
            android:id="@+id/txtLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_above="@id/txtConnect"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/no_internet_connection"
            android:textSize="@dimen/_12ssp" />


        <TextView
            android:id="@+id/txtConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_above="@id/retryCurrentListOrders"
            android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/_50sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/please_connect_to_internet"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/retryCurrentListOrders"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/stroke_solid_btn"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="@dimen/_30sdp"
            android:text="@string/retry"
            android:textColor="#de4500"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</RelativeLayout>